[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Dramm-bit <davidmendozamejia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.34"
alembic = "^1.7.7"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
